--- a/middleterrain-coatl-list/Web.config
+++ b/middleterrain-coatl-list/Web.config
@@ -39,10 +39,10 @@ http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
         <add assembly="System.Xml.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
       </assemblies>
     </compilation>
-<customErrors mode="On" >
-     <error statusCode="404" redirect="~/Errors/NotFound"/>
-</customErrors>
-      <pages>
+    <customErrors mode="Off">
+      <error statusCode="404" redirect="~/Errors/NotFound" />
+    </customErrors>
+    <pages>
       <controls>
         <add tagPrefix="asp" namespace="System.Web.UI" assembly="System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
         <add tagPrefix="asp" namespace="System.Web.UI.WebControls" assembly="System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
