Connection to SharpSQL is made configurable from Web.Config

--- a/middleterrain-coatl-list/Web.config
+++ b/middleterrain-coatl-list/Web.config
@@ -8,6 +8,7 @@ http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
 -->
 <configuration>
   <configSections>
+    <section name="system.data" type="System.Data.Common.DbProviderFactoriesConfigurationHandler, System.Data, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
     <sectionGroup name="system.web.extensions" type="System.Web.Configuration.SystemWebExtensionsSectionGroup, System.Web.Extensions, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
       <sectionGroup name="scripting" type="System.Web.Configuration.ScriptingSectionGroup, System.Web.Extensions, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
         <section name="scriptResourceHandler" type="System.Web.Configuration.ScriptingScriptResourceHandlerSection, System.Web.Extensions, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="MachineToApplication" />
@@ -20,6 +21,16 @@ http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
       </sectionGroup>
     </sectionGroup>
   </configSections>
+  <system.data>
+    <DbProviderFactories>
+      <remove invariant="System.Data.SharpHSQL" />
+      <add invariant="System.Data.SharpHSQL" type="System.Data.Hsql.SharpHsqlDbProviderFactory, SharpHSQL, Version=4.0.0.0, Culture=neutral" name="SharpHSQL Provider" description="SharpHSQL ADO .Net Data Provider" />
+    </DbProviderFactories>
+  </system.data>
+  <connectionStrings>
+    <clear />
+    <add name="ConnStr" providerName="System.Data.SharpHSQL" connectionString="database=test;user id=sa;password=;" />
+  </connectionStrings>
   <system.web>
     <!-- 
 		    Set compilation debug="true" to insert debugging 
@@ -29,10 +40,6 @@ http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
 		-->
     <compilation defaultLanguage="C#" debug="false">
       <assemblies>
-        <add assembly="System.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-        <add assembly="System.ComponentModel.DataAnnotations, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-        <add assembly="System.Xml.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-        <add assembly="System.Web.Routing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
       </assemblies>
     </compilation>
     <customErrors mode="Off">
