test code for table span selection added

--- a/middleterrain-coatl-list/Web.config
+++ b/middleterrain-coatl-list/Web.config
@@ -24,7 +24,7 @@ http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
   <system.data>
     <DbProviderFactories>
       <remove invariant="System.Data.SharpHSQL" />
-      <add invariant="System.Data.SharpHSQL" type="System.Data.Hsql.SharpHsqlDbProviderFactory, SharpHSQL, Version=4.0.0.0, Culture=neutral" name="SharpHSQL Provider" description="SharpHSQL ADO .Net Data Provider" />
+      <add invariant="System.Data.SharpHSQL" type="System.Data.Hsql.SharpHsqlDbProviderFactory, SharpHsql, Version=4.0.1.0, Culture=neutral" name="SharpHSQL Provider" description="SharpHSQL ADO .Net Data Provider" />
     </DbProviderFactories>
   </system.data>
   <connectionStrings>
