--- a/middleterrain-coatl-list/Web.config
+++ b/middleterrain-coatl-list/Web.config
@@ -38,6 +38,7 @@ http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
 		    affects performance, set this value to true only 
 		    during development.
 		-->
+
     <compilation defaultLanguage="C#" debug="false">
       <assemblies>
       </assemblies>
@@ -77,6 +78,7 @@ http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
     </httpModules>
     <trace enabled="false" localOnly="true" pageOutput="false" requestLimit="10" traceMode="SortByTime" />
     <globalization requestEncoding="utf-8" responseEncoding="utf-8" />
+    <sessionState cookieless= "UseUri" /> 
   </system.web>
   <system.codedom>
     <compilers>
