--- a/middleterrain-coatl-list/Web.config
+++ b/middleterrain-coatl-list/Web.config
@@ -78,7 +78,10 @@ http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
     </httpModules>
     <trace enabled="false" localOnly="true" pageOutput="false" requestLimit="10" traceMode="SortByTime" />
     <globalization requestEncoding="utf-8" responseEncoding="utf-8" />
-    <sessionState cookieless= "UseUri" /> 
+    <!-- Defaults for sessionState:
+             mode="InProc"
+    -->
+    <sessionState mode="InProc" cookieless="UseUri" /> 
   </system.web>
   <system.codedom>
     <compilers>
