MVC routing doesn't supported with cookieless sessions, giveup!

--- a/middleterrain-coatl-list/Web.config
+++ b/middleterrain-coatl-list/Web.config
@@ -81,7 +81,7 @@ http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
     <!-- Defaults for sessionState:
              mode="InProc"
     -->
-    <sessionState mode="InProc" cookieless="UseUri" /> 
+    <sessionState cookieless="UseUri" sessionIDManagerType="middleterraincoatllist.MySessionIDManager2" /> 
   </system.web>
   <system.codedom>
     <compilers>
