form input require name attributes to binf

--- a/middleterrain-coatl-list/Web.config
+++ b/middleterrain-coatl-list/Web.config
@@ -84,6 +84,7 @@ http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
     <!--
     <sessionState cookieless="UseUri" sessionIDManagerType="middleterraincoatllist.MySessionIDManager2" /> 
     -->
+	<sessionState cookieless="UseCookies" />
   </system.web>
   <system.codedom>
     <compilers>
