npgsql package added

--- a/middleterrain-coatl-list/middleterrain-coatl-list.csproj
+++ b/middleterrain-coatl-list/middleterrain-coatl-list.csproj
@@ -58,6 +58,9 @@
     <Reference Include="System.Web.Routing" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
+    <Reference Include="Npgsql">
+      <HintPath>..\packages\Npgsql.3.0.5\lib\net45\Npgsql.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\" />
@@ -103,10 +106,4 @@
       </Properties>
     </MonoDevelop>
   </ProjectExtensions>
-  <ItemGroup>
-    <ProjectReference Include="..\..\SharpHSQL.git\src\SharpHSQL\SharpHsql.csproj">
-      <Project>{B98F7374-FF00-4BB7-93EC-39763A76BFFF}</Project>
-      <Name>SharpHsql</Name>
-    </ProjectReference>
-  </ItemGroup>
 </Project>
