--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="../db_code_test/packages.config" />
   <repository path="../middleterrain-coatl-list.Tests/packages.config" />
   <repository path="../middleterrain-coatl-list/packages.config" />
 </repositories>
