--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,4 +3,5 @@
   <repository path="../db_code_test/packages.config" />
   <repository path="../middleterrain-coatl-list.Tests/packages.config" />
   <repository path="../middleterrain-coatl-list/packages.config" />
+  <repository path="../tests/packages.config" />
 </repositories>
