naive implementation of sets

--- a/db_code_test/db_code_test.csproj
+++ b/db_code_test/db_code_test.csproj
@@ -86,6 +86,8 @@
     <Compile Include="transformations\ReflectionToAbstractModel\ReflectionHelper.cs" />
     <Compile Include="AbstractSyntaxModel\MemberType.cs" />
     <Compile Include="ModelForAbstractDb\ColumnType.cs" />
+    <Compile Include="transformations\SyntaxModelToDatabaseModel\MapSetsOfObjects.cs" />
+    <Compile Include="transformations\EtoParseToAbstractModel\CopySetsAndArrays.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
