--- a/db_code_test/db_code_test.csproj
+++ b/db_code_test/db_code_test.csproj
@@ -51,27 +51,10 @@
     <Compile Include="ModelForAbstractDb\Array.cs" />
     <Compile Include="ModelForAbstractDb\Schema.cs" />
     <Compile Include="ModelForAbstractDb\Ref.cs" />
-    <Compile Include="AbstractSyntaxModel\ClassDef.cs" />
-    <Compile Include="AbstractSyntaxModel\AbstractModel.cs" />
-    <Compile Include="AbstractSyntaxModel\ObjectDef.cs" />
-    <Compile Include="transformations\SyntaxModelToDatabaseModel.cs" />
     <Compile Include="transformations\DatabaseModelToPostgreSQL.cs" />
     <Compile Include="transformations\DatabaseModelToMySQL.cs" />
     <Compile Include="transformations\DatabaseModelToDevelDb.cs" />
-    <Compile Include="AbstractSyntaxModel\MemberDefArray.cs" />
-    <Compile Include="AbstractSyntaxModel\MemberDefSet.cs" />
-    <Compile Include="AbstractSyntaxModel\MemberDefRef.cs" />
-    <Compile Include="AbstractSyntaxModel\MemberDefAbstraction.cs" />
-    <Compile Include="AbstractSyntaxModel\PropertyDefAbstraction.cs" />
-    <Compile Include="AbstractSyntaxModel\MemberDefRaw.cs" />
-    <Compile Include="AbstractSyntaxModel\PropertyDefRaw.cs" />
-    <Compile Include="AbstractSyntaxModel\PropertyDefSet.cs" />
-    <Compile Include="AbstractSyntaxModel\PropertyDefArray.cs" />
-    <Compile Include="AbstractSyntaxModel\VariableDef.cs" />
-    <Compile Include="AbstractSyntaxModel\Variable.cs" />
     <Compile Include="Globals.Parse.cs" />
-    <Compile Include="transformations\SyntaxModelToDatabaseModel\MapClassesToTables.cs" />
-    <Compile Include="transformations\SyntaxModelToDatabaseModel\MapInheritanceLinks.cs" />
     <Compile Include="ModelForAbstractDb\Schema.Tables.cs" />
     <Compile Include="ModelForAbstractDb\Cell.cs" />
     <Compile Include="ModelForAbstractDb\Row.cs" />
@@ -81,13 +64,36 @@
     <Compile Include="ModelForAdoNet\DbCommandSequence.Generate.cs" />
     <Compile Include="TopologicalSort.cs" />
     <Compile Include="ModelForAdoNet\NonspecificDbParameterCollection.cs" />
+    <Compile Include="transformations\ReflectionToAbstractModel\ReflectionHelper.cs" />
+    <Compile Include="ModelForAbstractDb\ColumnType.cs" />
     <Compile Include="transformations\EtoParseToAbstractModel\CreateTableDefs.cs" />
     <Compile Include="transformations\EtoParseToAbstractModel\CopyRawFields.cs" />
-    <Compile Include="transformations\ReflectionToAbstractModel\ReflectionHelper.cs" />
-    <Compile Include="AbstractSyntaxModel\MemberType.cs" />
-    <Compile Include="ModelForAbstractDb\ColumnType.cs" />
-    <Compile Include="transformations\SyntaxModelToDatabaseModel\MapSetsOfObjects.cs" />
     <Compile Include="transformations\EtoParseToAbstractModel\CopySetsAndArrays.cs" />
+    <Compile Include="transformations\AbstractModelToDatabaseModel\MapClassesToTables.cs" />
+    <Compile Include="transformations\AbstractModelToDatabaseModel\MapInheritanceLinks.cs" />
+    <Compile Include="transformations\AbstractModelToDatabaseModel\MapSetsOfObjects.cs" />
+    <Compile Include="transformations\AbstractModelToDatabaseModel.cs" />
+    <Compile Include="AbstractModel\ClassDef.cs" />
+    <Compile Include="AbstractModel\AbstractModel.cs" />
+    <Compile Include="AbstractModel\ObjectDef.cs" />
+    <Compile Include="AbstractModel\MemberDefArray.cs" />
+    <Compile Include="AbstractModel\MemberDefSet.cs" />
+    <Compile Include="AbstractModel\MemberDefRef.cs" />
+    <Compile Include="AbstractModel\MemberDefAbstraction.cs" />
+    <Compile Include="AbstractModel\PropertyDefAbstraction.cs" />
+    <Compile Include="AbstractModel\MemberDefRaw.cs" />
+    <Compile Include="AbstractModel\PropertyDefRaw.cs" />
+    <Compile Include="AbstractModel\PropertyDefSet.cs" />
+    <Compile Include="AbstractModel\PropertyDefArray.cs" />
+    <Compile Include="AbstractModel\VariableDef.cs" />
+    <Compile Include="AbstractModel\Variable.cs" />
+    <Compile Include="AbstractModel\MemberType.cs" />
+    <Compile Include="CSharpModel\cs_class.cs" />
+    <Compile Include="CSharpModel\cs_property.cs" />
+    <Compile Include="CSharpModel\cs_method.cs" />
+    <Compile Include="CSharpModel\cs_field.cs" />
+    <Compile Include="CSharpModel\cs_delegate.cs" />
+    <Compile Include="CSharpModel\cs_event.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -98,11 +104,12 @@
     <Folder Include="Resources\" />
     <Folder Include="transformations\" />
     <Folder Include="ModelForAbstractDb\" />
-    <Folder Include="AbstractSyntaxModel\" />
-    <Folder Include="transformations\SyntaxModelToDatabaseModel\" />
     <Folder Include="ModelForAdoNet\" />
-    <Folder Include="transformations\EtoParseToAbstractModel\" />
     <Folder Include="transformations\ReflectionToAbstractModel\" />
+    <Folder Include="transformations\EtoParseToAbstractModel\" />
+    <Folder Include="transformations\AbstractModelToDatabaseModel\" />
+    <Folder Include="AbstractModel\" />
+    <Folder Include="CSharpModel\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\lang.ebnf" />
