promary kes added

--- a/db_code_test/db_code_test.csproj
+++ b/db_code_test/db_code_test.csproj
@@ -45,7 +45,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Globals.cs" />
     <Compile Include="Globals.Resources.cs" />
-    <Compile Include="transformations\EtoParseToAbstractModel.cs" />
     <Compile Include="ModelForAbstractDb\Table.cs" />
     <Compile Include="ModelForAbstractDb\Column.cs" />
     <Compile Include="ModelForAbstractDb\Array.cs" />
@@ -66,34 +65,36 @@
     <Compile Include="ModelForAdoNet\NonspecificDbParameterCollection.cs" />
     <Compile Include="transformations\ReflectionToAbstractModel\ReflectionHelper.cs" />
     <Compile Include="ModelForAbstractDb\ColumnType.cs" />
-    <Compile Include="transformations\EtoParseToAbstractModel\CreateTableDefs.cs" />
-    <Compile Include="transformations\EtoParseToAbstractModel\CopyRawFields.cs" />
-    <Compile Include="transformations\EtoParseToAbstractModel\CopySetsAndArrays.cs" />
-    <Compile Include="transformations\AbstractModelToDatabaseModel\MapClassesToTables.cs" />
-    <Compile Include="transformations\AbstractModelToDatabaseModel\MapInheritanceLinks.cs" />
-    <Compile Include="transformations\AbstractModelToDatabaseModel\MapSetsOfObjects.cs" />
-    <Compile Include="transformations\AbstractModelToDatabaseModel.cs" />
-    <Compile Include="AbstractModel\ClassDef.cs" />
-    <Compile Include="AbstractModel\AbstractModel.cs" />
-    <Compile Include="AbstractModel\ObjectDef.cs" />
-    <Compile Include="AbstractModel\MemberDefArray.cs" />
-    <Compile Include="AbstractModel\MemberDefSet.cs" />
-    <Compile Include="AbstractModel\MemberDefRef.cs" />
-    <Compile Include="AbstractModel\MemberDefAbstraction.cs" />
-    <Compile Include="AbstractModel\PropertyDefAbstraction.cs" />
-    <Compile Include="AbstractModel\MemberDefRaw.cs" />
-    <Compile Include="AbstractModel\PropertyDefRaw.cs" />
-    <Compile Include="AbstractModel\PropertyDefSet.cs" />
-    <Compile Include="AbstractModel\PropertyDefArray.cs" />
-    <Compile Include="AbstractModel\VariableDef.cs" />
-    <Compile Include="AbstractModel\Variable.cs" />
-    <Compile Include="AbstractModel\MemberType.cs" />
     <Compile Include="CSharpModel\cs_class.cs" />
     <Compile Include="CSharpModel\cs_property.cs" />
     <Compile Include="CSharpModel\cs_method.cs" />
     <Compile Include="CSharpModel\cs_field.cs" />
     <Compile Include="CSharpModel\cs_delegate.cs" />
     <Compile Include="CSharpModel\cs_event.cs" />
+    <Compile Include="ModelForAbstractDb\Sequence.cs" />
+    <Compile Include="LanguageModel\ClassDef.cs" />
+    <Compile Include="LanguageModel\ObjectDef.cs" />
+    <Compile Include="LanguageModel\MemberDefArray.cs" />
+    <Compile Include="LanguageModel\MemberDefSet.cs" />
+    <Compile Include="LanguageModel\MemberDefRef.cs" />
+    <Compile Include="LanguageModel\MemberDefAbstraction.cs" />
+    <Compile Include="LanguageModel\PropertyDefAbstraction.cs" />
+    <Compile Include="LanguageModel\MemberDefRaw.cs" />
+    <Compile Include="LanguageModel\PropertyDefRaw.cs" />
+    <Compile Include="LanguageModel\PropertyDefSet.cs" />
+    <Compile Include="LanguageModel\PropertyDefArray.cs" />
+    <Compile Include="LanguageModel\VariableDef.cs" />
+    <Compile Include="LanguageModel\Variable.cs" />
+    <Compile Include="LanguageModel\MemberType.cs" />
+    <Compile Include="LanguageModel\LanguageModel.cs" />
+    <Compile Include="transformations\LanguageModelToDatabaseModel\MapClassesToTables.cs" />
+    <Compile Include="transformations\LanguageModelToDatabaseModel\MapInheritanceLinks.cs" />
+    <Compile Include="transformations\LanguageModelToDatabaseModel\MapSetsOfObjects.cs" />
+    <Compile Include="transformations\LanguageModelToDatabaseModel\LanguageModelToDatabaseModel.cs" />
+    <Compile Include="transformations\EtoParseToLanguageModel\CreateTableDefs.cs" />
+    <Compile Include="transformations\EtoParseToLanguageModel\CopyRawFields.cs" />
+    <Compile Include="transformations\EtoParseToLanguageModel\CopySetsAndArrays.cs" />
+    <Compile Include="transformations\EtoParseToLanguageModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -106,10 +107,10 @@
     <Folder Include="ModelForAbstractDb\" />
     <Folder Include="ModelForAdoNet\" />
     <Folder Include="transformations\ReflectionToAbstractModel\" />
-    <Folder Include="transformations\EtoParseToAbstractModel\" />
-    <Folder Include="transformations\AbstractModelToDatabaseModel\" />
-    <Folder Include="AbstractModel\" />
     <Folder Include="CSharpModel\" />
+    <Folder Include="LanguageModel\" />
+    <Folder Include="transformations\LanguageModelToDatabaseModel\" />
+    <Folder Include="transformations\EtoParseToLanguageModel\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\lang.ebnf" />
